--- a/src/index.css
+++ b/src/index.css
@@ -10,13 +10,13 @@
     }
   
     .padding-x {
-      @apply lg:px-24 px-6;
+      @apply xl:px-24 px-6;
     }
     .padding-l {
-      @apply lg:pl-24 pl-6;
+      @apply xl:pl-24 pl-6;
     }
     .padding-r {
-      @apply lg:pr-24 pr-6;
+      @apply xl:pr-24 pr-6;
     }
   
     .padding-y {
