--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    letter-spacing: 0.25px !important;
 }
 
 body {
     font-family: 'SF Pro Disply';
-    letter-spacing: 0.35px;
+
 }
 p{
     line-height: 1.4;
@@ -37,3 +38,18 @@ input,textarea{
 .trans {
     transition: all 0.3s ease-in-out;
   }
+
+  td{
+    padding: 0.65rem 1rem;
+    font-size: 14px;
+    color: #5F6C72;
+    border-bottom: 1px solid #E4E7E9;
+  }
+  thead td{
+    font-weight: 500;
+    color: #000;
+  }
+  ::-webkit-scrollbar {
+   display: none;
+  }
+  
